--- a/live.html
+++ b/live.html
@@ -1,1 +1,1 @@
-<html> <body><img src="http:192.168.1.5:8090/?action=stream" width="600"> </body> </html>
+<html> <body><img src="http:192.168.1.5:8090/?action=stream" width="640" height="480"> </body> </html>
